@@ -1,3 +1,14 @@
+2004-01-08  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>
+
+	* lib/consttab.cpp :
+	* lib/consttab.h :
+	* lib/expression.cpp :
+	* lib/expression.h :
+	* lib/fact.cpp :
+	* lib/fact.h :
+
+	  - Added a replace() function to be used for variable grounding.
+
 2004-01-06  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>
 
 	* Tagged vlad-1_1_0
